<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.restaurantfinder.SelectActivity"
    android:background="@color/colorPrimary2"
    >

    <Button
        android:id="@+id/typeBtn"
        android:layout_width="382dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#7bd2dd"
        android:elevation="24dp"
        android:text="@string/btnres1"
        android:textColor="@color/colorPrimary2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/viewAllBtn"
        android:backgroundTint="#FFA552"
        android:textColor="@color/colorPrimary2"
        android:layout_width="384dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:elevation="23dp"
        android:text="@string/viewAllText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="2dp" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="375dp"
        android:layout_height="198dp"
        android:layout_marginBottom="167dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary2"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeBtn"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/priceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:backgroundTint="@color/colorRelative"
            android:elevation="21dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btnres2"
            android:textColor="@color/colorPrimary2"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/fromTv"
            android:layout_width="140dp"
            android:layout_height="49dp"
            android:layout_alignBottom="@+id/toTv"
            android:layout_alignStart="@+id/priceBtn"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="14dp"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"
            android:text="@string/btnresnull" />

        <EditText
            android:id="@+id/toTv"
            android:layout_width="140dp"
            android:layout_height="49dp"
            android:layout_alignEnd="@+id/priceBtn"
            android:layout_below="@+id/priceBtn"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint2"
            android:inputType="numberDecimal"
            android:text="@string/btnresnull" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
